Add what's next to Windows 2025 FCP and iSCSI

--- a/hu-windows-2025.adoc
+++ b/hu-windows-2025.adoc
@@ -30,5 +30,7 @@ include::_include/windows/windows_install_WUHU.adoc[]
 
 include::_include/windows/windows-multipathing.adoc[]
 
-== Known issues
-There are no known issues for the Windows Server 2025 with ONTAP release.
+== Step 5: Review the Known issues
+There are no known issues.
+
+include::_include/windows/windows-whats-next.adoc[]
