--- a/nvme-proxmox-index.adoc
+++ b/nvme-proxmox-index.adoc
@@ -13,47 +13,39 @@ summary: Learn about ONTAP support and features for Proxmox hosts
 :imagesdir: ./media/
 
 [.lead]
-The following ONTAP features are supported by ONTAP versions and Proxmox SAN host operating systems for configuration with NVMe over Fabrics (NVMe-oF) protocols. 
+Features supported for host configuration with NVMe over Fabrics (NVMe-oF) varies based on your version of ONTAP and Proxmox.
 
-[cols="30,20,20,30",options="header"]
+[cols="30,20,20",options="header"]
 |===
 
-|ONTAP feature | Proxmox hosts supported beginning with ..| ONTAP version supported beginning with .. | Description
+|ONTAP feature | Proxmox host version | ONTAP version 
 
-|NVMe/TCP in addition to NVMe/FC
+| Provides ONTAP details for both NVMe/FC and NVMe/TCP namespaces using the native `nvme-cli` package.
 
 a|9.0 
-|9.10.1
-| Provides ONTAP details for both NVMe/FC and NVMe/TCP namespaces using the native `nvme-cli` package.
+|9.10.1 or later
+
 |NVMe/TCP is a fully supported enterprise feature 
 a|9.0 
-|9.10.1
-|
-|NVMe and SCSI traffic supported on the same host
+|9.10.1 or later
+| NVMe and SCSI traffic is supported on the same host using NVMe multipath for NVMe-oF namespaces and dm-multipath for SCSI LUNs
 
 a|9.0 
- |9.4
-| Use dm-multipath for SCSI LUNs and NVMe multipath for NVMe-oF namespaces 
+|9.4 or later
 |===
 
 ONTAP supports the following SAN host features regardless of the ONTAP version running on your system setup.
 
-[cols="35,30,35",options="header"]
+[cols="70,30",options="header"]
 |===
 
-|ONTAP feature | Proxmox hosts supported beginning with .. | Notes
-
-|Native NVMe multipathing is always enabled 
-a|9.0 
-| ONTAP does not support Device Mapper (DM) multipath for NVMe-oF.
-
-|`nvme-cli` package includes auto-connect scripts
-
-a|9.0
-| You do not need third-party scripts.
-|Native udev rule in `nvme-cli` package
-a|9.0
-| Provides queue-depth load balancing for NVMe multipath
+| Feature | Proxmox host version
+| Native NVMe multipathing is enabled by default
+a| 9.0 
+| The `nvme-cli` package includes auto-connect scripts removing the need for third-party scripts
+a| 9.0
+| The native udev rule in `nvme-cli` package provides round-robin load balancing for NVMe multipath
+a| 9.0
 |===
 
 NOTE: For details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
