--- a/nvme-rhel-supported-features.adoc
+++ b/nvme-rhel-supported-features.adoc
@@ -68,4 +68,4 @@ NOTE: For details on supported configurations, see the link:https://mysupport.ne
 
 .Related information
 
-link:https://docs.netapp.com/us-en/ontap/san-admin/start-nvme-fc-service-svm-task.html[Learn about managing NVMe protocols]
+link:https://docs.netapp.com/us-en/ontap/san-admin/start-nvme-fc-service-svm-task.html[Learn about managing NVMe protocols^]
