Edit post IE review

--- a/nvme-proxmox-supported-features.adoc
+++ b/nvme-proxmox-supported-features.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme-proxmox-index.html
+permalink: nvme-proxmox-supported-features.html
 keywords: nvme, proxmox, enterprise
 summary: Learn about ONTAP support and features for Proxmox hosts
 ---
