--- a/hu-proxmox-ve-9x.adoc
+++ b/hu-proxmox-ve-9x.adoc
@@ -15,7 +15,7 @@ summary: Install Linux Host Utilities on a Proxmox VE 9.0 host to manage FCP and
 [.lead]
 Configure Proxmox VE 9.0 for multipathing and with specific parameters and settings for FCP and iSCSI protocol operations with ONTAP storage.
 
-FCP and iSCSI with Proxmox VE 9.0 has the following known limitations:
+FCP and iSCSI with Proxmox VE 9.0 have the following known limitations:
 
 * The Linux Host Utilities do not support Proxmox VE 9.0 operating systems.
 * The SAN boot configuration is not supported.
